<resources>
    <string name="app_name">WheatherApp</string>
    <string name="offer">Выберите город:</string>
    <string name="textForButton">Погода</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="more">More</string>
    <string name="add_more">Add more</string>
    <string name="another_settings">Another settings</string>
    <string name="element_nmb">Элемент номер</string>
    <string name="weather_Result">Прогноз погоды</string>
    <string name="send_Result">Поделиться</string>
    <string name="chooser_title">Сделать выбор</string>
    <string name="no_app">Не найдено ни одного приложения</string>
    <string name="count_value">Количество переходов на основной экран:</string>
    <string name="давление">Давление</string>
    <string name="погодаНаЗавтра">Погода на завтра</string>
    <string name="ПогодаНаНеделю">Погода на неделю</string>
    <string name="двоеточие">:  </string>
    <string name="settings">settings</string>
    <string name="infoAboutApp">О приложении</string>
    <string name="info">Погодное приложение "Weather" является разработкой
        в рамках курсов Android 1 и Android2 от GeekBrains.
    Разработчик: Чепёлкин Иван
    Преподователь: Рыбалка Владимир</string>
    <string name="aboutCreator">О разработчике</string>
    <string name="mark">Оценить приложение</string>
    <string name="notice">Уведомления</string>
    <string name="gitHubRepository">https://github.com/SpartakChampion/WheatherApp</string>
    <string name="textAboutCreator">Разработчик - начинающий программист, который очень хочет заработать много денег)))</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">Place not found</string>
    <string name="change_city">Change city</string>

    <!-- Создаём массив городов -->

    <string-array name="cityGroup">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Екатеринбург</item>
        <item>Казань</item>
        <item>Краснодар</item>
    </string-array>

    <string-array name="weather">
        <item>+25, Облачно </item>
        <item>+31, Дожди </item>
        <item>+15, Пасмурно</item>
        <item>+19, Град</item>
        <item>+35, Солнечно</item>
    </string-array>

    <string-array name="pressure">
        <item>762 мм рт.ст </item>
        <item>760 мм рт.ст </item>
        <item>757 мм рт.ст</item>
        <item>765 мм рт.ст</item>
        <item>761 мм рт.ст</item>
    </string-array>

    <string-array name="weatherDay">
        <item>+27, Ясно </item>
        <item>+29, Дожди </item>
        <item>+13, Облачно</item>
        <item>+25, Солнечно</item>
        <item>+30, Облачно</item>
    </string-array>

    <string-array name="weatherWeek">
        <item>Всю неделю ясно </item>
        <item>Всю неделю дожди </item>
        <item>Всю неделю облачно</item>
        <item>Всю неделю солнечно</item>
        <item>Всю неделю облачно</item>
    </string-array>

</resources>
