<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/pressureCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/давление"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/weatherDayCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/погодаНаЗавтра"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/weatherWeekCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ПогодаНаНеделю"
            android:layout_weight="2"/>
    </LinearLayout>
    <TextView
        android:id="@+id/dispayPressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/dispayWeatherDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/dispayWeatherWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

</LinearLayout>